# optimization_for_image_processing

./: CMakeLists.txt  README.md  run.sh
include/: adam_optimizer.h  gauss_newton.h  gradient_descent.h
src/: adam_optimizer.cpp  gauss_newton.cpp  gradient_descent.cpp  train_kernel.cpp
